--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,12 +6,15 @@
 
 .main {
   flex: 1;
-  padding-block: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .section {
   width: 100%;
   max-width: 72rem;
-  margin-inline: auto;
-  padding-inline: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
